--- a/app/sections/section2/section2.module.scss
+++ b/app/sections/section2/section2.module.scss
@@ -36,6 +36,7 @@
   margin-top: 1rem;
   font-size: clamp(1.5rem, 7vw, 4.5rem) !important;
   font-family: Cardo !important;
+
 }
 .line {
   height: 3px;
@@ -55,25 +56,35 @@
 
 .text2 {
   width: 80%;
-  line-break: loose;
-  word-break: unset;
+  // line-break: loose;
+  // word-break: unset;
+  text-align: start;
   border-radius: 5px;
   padding: clamp(1rem, 2vw, 2rem);
-  background-color: $text_color;
+  // background-color: $text_color;
+  display: inline;
+  // background-color: black ;
   -webkit-text-stroke-width: 1px;
   font-size: clamp(1.5rem, 2.2vw, 3rem);
   line-height: clamp(2rem, 4vw, 3.5rem);
   margin-top: auto;
   margin-bottom: auto;
   height: auto;
+  font-kerning: none;
+  color: black;
 }
 .text2 > * {
   // background-color: green;
-  white-space: nowrap;
-  word-break: unset;
+  // white-space: nowrap;
+  // word-break: unset;
   font-family: "Lobster Two";
   font-style: italic;
+  text-align: start;
+  color: black;
   // color: $text_color !important;
+}
+.texttt {
+  font-kerning: none;
 }
 @media screen and (max-width: 800px) {
   .title {
@@ -82,6 +93,7 @@
   .text {
     width: 95%;
     text-align: center;
+
   }
   .text > * {
     font-size: 1.3rem;
@@ -95,6 +107,7 @@
     font-size: 1.2rem;
     line-height: 1.8rem;
     width: 96%;
+    min-height: 65vh;
   }
   .section2 {
     height: 100lvh;
