--- a/app/components/menu/Menu.scss
+++ b/app/components/menu/Menu.scss
@@ -104,6 +104,7 @@ nav {
   transform: translate3d(0, 0, 0);
   z-index: 10;
   clip-path: polygon(0 0, 100% 0, 100% 100%, 90% 100%);
+  height: 100lvh;
 }
 
 nav section {
