--- a/app/sections/Section5_mobile/section5_mobile.module.scss
+++ b/app/sections/Section5_mobile/section5_mobile.module.scss
@@ -21,12 +21,14 @@
   padding: 0 4%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.8rem;
+
   * {
     color: $text_color;
     font-family: Cardo;
     font-weight: 600;
   }
+
   .image {
     display: flex;
 
@@ -43,7 +45,15 @@
       object-fit: fill !important;
     }
   }
-
+  .details {
+    display: flex;
+    flex-direction: column;
+    gap: 0.7rem; ;
+    > *{
+      // text-align: end; 
+    }
+  
+  }
   .title {
     font-family: "Red Hat Display";
     font-size: 2rem;
@@ -53,6 +63,7 @@
   .area {
     font-size: 0.8rem;
     font-style: italic;
+    // text-align: end;
   }
   .link {
     a {
@@ -65,15 +76,32 @@
   .tools {
     color: teal;
     // font-style: italic;
-    display: inline-flex;
+    // display: inline-flex;
     gap: 10px;
+    
+
+  }
+  &:nth-child(odd){
+    .details {
+      *{
+        text-align: end; 
+      }
+    
+    }
   }
 }
 .bullet {
   display: inline-flex;
   align-items: center;
   color: teal;
+  margin-right: 10px;
+  &:last-child{
+  margin-right:0px;
+
+    
+  }
 }
+
 .bullet > span {
   display: inline-flex;
   width: 5px;
