--- a/app/sections/stackedCards/stackCards.module.scss
+++ b/app/sections/stackedCards/stackCards.module.scss
@@ -175,9 +175,10 @@
 
 @media screen and (max-width: 700px) {
   .card {
+    // height: ;
     width: 94%;
     padding: 1.3rem;
-    height: 300px;
+    // height: 300px;
     border-radius: 1rem;
   }
   .body {
