--- a/global.scss
+++ b/global.scss
@@ -54,11 +54,7 @@ body {
 }
 
 body {
-  // overflow-y: visible;
   position: relative;
-  overflow-x: hidden;
-  // height: 100vh;
-  // overflow: hidden;
 }
 
 // .aki_wrapper {
@@ -175,6 +171,6 @@ body {
 // }
 
 .body {
-  // height: 100vh;
-  // overflow: hidden;
+  height: 100vh;
+  overflow: hidden;
 }
